k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-deployment
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: 524041749761.dkr.ecr.us-east-1.amazonaws.com/flask-app:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
spec:
  ports:
  - port: 5002
    protocol: TCP
    targetPort: 5002
  selector:
    app: flask-app
  type: LoadBalancer
